--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <div>
-  <h1>Example heading <span class="badge text-bg-secondary">New</span></h1>
-  <button class="btn btn-primary" >click me</button>
+  hello
   <router-outlet></router-outlet>
+  <app-navbar></app-navbar>
 </div>
-
-
