create student page

--- a/src/app/Pages/Partials/navbar/navbar.component.html
+++ b/src/app/Pages/Partials/navbar/navbar.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg bg-white shadow">
+  <div class="container" >
     <a class="navbar-brand" routerLink="/">Angular Curd</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,7 +7,7 @@
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item active">
           <a class="nav-link active" routerLink="/">Home</a>
         </li>
@@ -19,4 +20,5 @@
       </ul>
       
     </div>
+  </div>
   </nav>
