--- a/src/app/Pages/Partials/navbar/navbar.component.html
+++ b/src/app/Pages/Partials/navbar/navbar.component.html
@@ -17,6 +17,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/contact-page">Contact Page</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/students">Students Lists</a>
+        </li>
       </ul>
       
     </div>
