--- a/src/app/Pages/student-page/student-page.component.html
+++ b/src/app/Pages/student-page/student-page.component.html
@@ -1,1 +1,44 @@
-<p>student-page works!</p>
+<div>
+    <div class="mt-5 container">
+        <div class="card">
+            <div class="card-header">
+                <h4>Student Lists
+                    <a routerLink="/students/create" class="btn btn-primary float-end">Add student</a>
+                </h4>
+            </div>
+            <div class="card-body">
+                <div *ngIf="isLoading; else elseTableBlock" >
+                    <app-loader />
+                </div>
+                <ng-template #elseTableBlock>
+                    <table class="table table-striped table-bordered">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>NAME</th>
+                                <th>COURSE</th>
+                                <th>EMAIL</th>
+                                <th>PHONE</th>
+                                <th>CREATED AT</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let item of this.students" >
+                                <td>{{ item.id }}</td>
+                                <td>{{ item.name }}</td>
+                                <td>{{ item.course }}</td>
+                                <td>{{ item.email }}</td>
+                                <td>{{ item.phone }}</td>
+                                <td>{{ item.created_at }}</td>
+                                <td>
+                                    <a routerLink="/students/{{item.id}}/edit" class="btn btn-success btn-sm mx-2">Edit</a>
+                                    <button type="button" class="btn btn-danger btn-sm">Delete</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </ng-template>
+            </div>
+        </div>
+    </div>
+</div>
