--- a/src/app/Pages/student-create/student-create.component.html
+++ b/src/app/Pages/student-create/student-create.component.html
@@ -2,7 +2,7 @@
     <div class="container mt-5">
         <div class="card">
             <div class="card-header">
-                <h4>Student Create
+                <h4>Add Student
                     <a routerLink="/students" class="btn btn-danger float-end">Back</a>
                 </h4>
             </div>
