--- a/src/app/Pages/student-edit/student-edit.component.html
+++ b/src/app/Pages/student-edit/student-edit.component.html
@@ -1,1 +1,46 @@
-<p>student-edit works!</p>
+<div>
+    <div class="container mt-5">
+        <div class="card">
+            <div class="card-header">
+                <h4>Edit Student
+                    <a routerLink="/students" class="btn btn-danger float-end">Back</a>
+                </h4>
+            </div>
+            <div class="card-body">
+                <div *ngIf="isLoading; else elseForm">
+                    <app-loader :title = "loadingTitle" />
+                </div>
+                <ng-template #elseForm>
+                    <form (ngSubmit) = "updateStudent()">
+                        <div *ngIf="student" >
+                            <div class="mb-3">
+                                <label>Name</label>
+                                <input type="text" [(ngModel)] ="student.name"  name="name" class="form-control" />
+                                <span *ngIf="errors.name" class="text-danger">{{ errors.name }}</span>
+                            </div>
+                            <div class="mb-3">
+                                <label>Course</label>
+                                <input type="text" [(ngModel)] ="student.course"  name="course" class="form-control" />
+                                <span *ngIf="errors.course" class="text-danger">{{ errors.course }}</span>
+                            </div>
+                            <div class="mb-3">
+                                <label>Email</label>
+                                <input type="email" [(ngModel)] ="student.email"  name="email" class="form-control" />
+                                <span *ngIf="errors.email" class="text-danger">{{ errors.email }}</span>
+                            </div>
+                            <div class="mb-3">
+                                <label>Phone</label>
+                                <input type="phone" [(ngModel)] ="student.phone"  name="phone" class="form-control" />
+                                <span *ngIf="errors.phone" class="text-danger">{{ errors.phone }}</span>
+                            </div>
+        
+                            <div class="mb-3">
+                                <button type="submit" class="btn btn-primary" >Update</button>
+                            </div>
+                        </div>
+                    </form>
+                </ng-template>
+            </div>
+        </div>
+    </div>
+</div>
