add other components

--- a/src/app/Pages/home-page/home-page.component.html
+++ b/src/app/Pages/home-page/home-page.component.html
@@ -1,3 +1,47 @@
-<div>
-    <h1>Home Page</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <div class="text-center mt-5">
+        <h1>Welcome to Our Website</h1>
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <a href="#" class="btn btn-primary btn-lg">Get Started</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="row mt-5">
+    <div class="col-md-4">
+      <div class="card bg-primary text-white">
+        <img src="https://via.placeholder.com/300" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Primary Card Title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-light">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card bg-success text-white">
+        <img src="https://via.placeholder.com/300" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Success Card Title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-light">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card bg-warning text-dark">
+        <img src="https://via.placeholder.com/300" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Warning Card Title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-dark">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
