--- a/src/app/Pages/about-page/about-page.component.html
+++ b/src/app/Pages/about-page/about-page.component.html
@@ -1,3 +1,34 @@
-<div>
-    <h1>About Page</h1>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="card mb-3">
+        <img src="https://via.placeholder.com/400" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Our Story</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eget sapien at felis consectetur volutpat ut sit amet libero.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="card mb-3">
+        <img src="https://via.placeholder.com/400" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Our Mission</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eget sapien at felis consectetur volutpat ut sit amet libero.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4">
+      <div class="bg-primary p-3 mb-3 text-white text-center">Our Values</div>
+    </div>
+    <div class="col-md-4">
+      <div class="bg-secondary p-3 mb-3 text-white text-center">Our Team</div>
+    </div>
+    <div class="col-md-4">
+      <div class="bg-success p-3 mb-3 text-white text-center">Our Achievements</div>
+    </div>
+  </div>
 </div>
